--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
          <input type="submit" value="I'm feeling lucky" name="btnI">
        </div>
 
+       <p> This is a change </p>
+
       </form>
     </div>
    </section>
